--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,22 @@
-title: 壹梦小屋
+title: Hello, world! I'm David Freeman
 description: > # this means to ignore newlines until "baseurl:"
-  念念不忘，必有回响
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: 壹梦 # add your name
-author-img: 头像.jpg # add your photo
-about-author: 希望我的分享可以帮助大家，同时助自己成长 # add description
+author: David Freeman # add your name
+author-img: david-freeman.jpg # add your photo
+about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github:MengEr007 # add your Github handle
+social-github: artemsheludko # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email:1184640625@qq.com # add your Email address
+social-email: # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
